Fix Address Overview on mobile

--- a/portal/src/assets/style/_mobile.scss
+++ b/portal/src/assets/style/_mobile.scss
@@ -1,6 +1,18 @@
 @import './modules/mobile/mobile-menu';
 
 /********** utilities **********/
+.is-desktop {
+  display: block;
+  @media screen and (max-width: $mobile-width) {
+	display: none;
+  }
+}
+.is-mobile {
+  display: none;
+  @media screen and (max-width: $mobile-width) {
+    display: block;
+  }
+}
 .mobile-only-display-inline {
   display: none;
   @media only screen and (max-width: $mobile-width) {
@@ -11,6 +23,9 @@
   @media only screen and (max-width: $mobile-width) {
     display: flex;
   }
+}
+hr {
+  display: none;
 }
 /********** utilities end **********/
 
@@ -108,15 +123,25 @@
     padding-right: 0px;
     padding-left: 0px;
   }
+
   .mobile-main-content {
     padding-right: 0px;
     padding-left: 0px;
     margin-top: 0px;
-    margin-bottom: 0px;
+	margin-bottom: 0px;
+	
+	.block-section {
+      box-shadow: none;
+      margin: 0;
+    }
   }
 
   .filter-form > div {
     margin-left: 1.5rem;
+  }
+
+  .address-tokens__table {
+    padding: 1rem 1.5rem;
   }
 
   .block-section h2 {
@@ -129,8 +154,8 @@
   }
 
   .filter-result__result {
-    margin-top: 0.1rem;
-    text-align: center;
+    margin: 1rem;
+    text-align: left;
   }
 
   .tx-table {
@@ -146,6 +171,14 @@
     padding: 5px 5px;
   }
 
+  .page-item {
+    .page-link {
+      color: #ffffff;
+      background-color: #1130FF;
+      font-weight: 600;
+      font-size: 0.8rem;
+    }
+  }
   // hide first and last button as they don't fit and not really necessary for mobile
   .pagination > li.page-item:first-child,
   .pagination > li.page-item:last-child {
@@ -156,8 +189,14 @@
     border-top: none;
   }
 
-  .filter-form .query-actions {
+  .filter-form {
     flex-direction: column;
+  }
+
+  .filter-form {
+    .query-actions {
+      flex-direction: column;
+    }
   }
 
   .mobile-home-tx-table tr:not(:nth-child(-n+5)) {
@@ -271,6 +310,87 @@
     }
   }
   display: none;
+}
+
+/********* Address page *******/
+@media only screen and (max-width: $mobile-width) {
+  .address-info {
+    flex-direction: column;
+  
+	.qr-img {
+	  width: unset;
+	  order: 2;
+	  align-self: center;
+	  padding: 1.5rem 0;
+      canvas {
+        width: 180px !important;
+        height: 180px !important;
+	  }
+	}
+	.address {
+	  width: unset;
+	  display: flex;
+	  order: 1;
+	  padding: 2rem 0.5rem 0 0.5rem;
+  
+	  h2 {
+        padding: 0;
+        font-size: 1rem;
+        margin-right: 1rem;
+        font-weight: 600;
+	  }
+
+	  .hash-wrapper {
+		border-radius: 1rem;
+		padding: .5rem 1rem .5rem .5rem;
+		.hash {
+		  width: unset;
+		  text-overflow: unset;
+		  overflow: initial;
+		  white-space: unset;
+		  word-break: break-word;
+		  font-size: 0.8rem;
+		  line-height: 1.5rem;
+		}
+		.copy-btn {
+		  margin: 0;
+		  .fa-copy {
+			stroke: #1130FF;
+			margin-right: 5px;
+			color: #ffffff;
+			stroke-width: 30px;
+		  }
+		}
+		.copy-btn:hover {
+		  .fa-copy {
+			stroke: #1130FF;
+			color: #ffffff;
+			stroke-width: 30px;
+		  }
+		}
+		.btn {
+		  padding: 0;
+        }
+      }
+    }
+  }
+  .table-responsive-lg {
+    width: unset;
+  }
+  .address-detail-page {
+    .mobile-main-content {
+      padding-right: 0px;
+      padding-left: 0px;
+      margin-top: 0px;
+	  margin-bottom: 0px;
+	
+	  .block-section {
+	    border: 0;
+	    box-shadow: none;
+	    margin: 0;	
+      }
+    }
+  }
 }
 
 /********** transaction summary page **********/
@@ -408,6 +528,58 @@
   display: none;
 }
 @media only screen and (max-width: $mobile-width) {
+  .format-option {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    h6 {
+      margin: 0;
+    }
+  }
+  .block-section {
+    .block-section__header {
+      padding: 0.5rem 0;
+    }
+  }
+  hr {
+    display: block;
+    background-color: #1130FF;
+    height: 2px;
+    width: 22rem;
+  }
+  .is-mobile {
+    .block-section__header--cols {
+      padding: 1rem 1.5rem;
+	  h2 {
+        font-size: 1.5rem;
+        text-align: center;
+        margin: 0;
+	  }
+	}
+	h2 {
+	  font-size: 1.5rem;
+	  text-align: left;
+	  margin-left: 1.5rem;
+    }
+  }
+  .address-tokens {
+	.filter-form {
+	  margin: 0;
+	  padding: 1rem 1.5rem;
+	  span {
+	    font-size: 1rem;
+      }
+	  .text {
+		display: block !important;
+	  }
+	}
+	.dropdown-item.active {
+	  background-color: #1130FF;
+	  h6 {
+	    color: #ffffff;
+      }
+    }
+  }
   .block-detail-page {
     .block-detail {
       box-shadow: none;
